# nim-crypto

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Build  COPYING  ChangeLog  Makefile.am  Makefile.simple  README.md  acinclude.m4  configure.ac
boot/: .gitignore  Makefile.am  nim-cfg.sh.in  nim-check.sh.in  nim-compile.sh.in  nim-paths.sh.in
import/: Makefile.am
src/: .gitignore  Makefile.am  Makefile.simple  README.md  main.c  nim-check.sh.in  session.html  session.nim  stub.c
src/lib/: .gitignore  Makefile.am  README.md  ecckey.html  ecckey.nim  ecckey_dumper.nim  rnd64.html  rnd64.nim  sesskey.html  sesskey.nim  test.sh  xcrypt.html  xcrypt.nim
src/lib/chacha/: .gitignore  Makefile.am  chacha.nim  chacha20specs.c  chachadesc  chachadesc.nim
src/lib/chacha/private/: chacha20_simple.c  chacha20_simple.h  chacha20_test.c
src/lib/chacha/private/chacha20-simple-1.0/: readme.txt
src/lib/ltc/: .gitignore  Makefile.am  aes80.nim  aes80desc.nim  check-sources.sh  frta.nim  frtadesc.nim  getbytes.nim  libtomcrypt.diff  ltc_const.nim  sha100.nim  sha100desc.nim  shaff.nim  source.txt  test.sh
src/lib/ltc/aesd/: ltc_aes.c  ltc_aes80specs.c
src/lib/ltc/blame/: aes.c-blame  aes_tab.c-blame  burn_stack.c-blame  crypt_argchk.c-blame  sha256.c-blame  tomcrypt.h-blame  tomcrypt_argchk.h-blame  tomcrypt_cfg.h-blame  tomcrypt_cipher.h-blame  tomcrypt_custom.h-blame  tomcrypt_hash.h-blame  tomcrypt_mac.h-blame  tomcrypt_macros.h-blame  tomcrypt_math.h-blame  tomcrypt_misc.h-blame  tomcrypt_pk.h-blame  tomcrypt_pkcs.h-blame  tomcrypt_prng.h-blame  zeromem.c-blame
src/lib/ltc/crypt/: ltc_crypt-argchk.c  ltc_crypt-const.c  ltc_zeromem.c
src/lib/ltc/fortunad/: ltc_fortuna.c  ltc_fortunaspecs.c  ltc_rng_get_bytes.c
src/lib/ltc/getbytesd/: wincrypt.c
src/lib/ltc/headers/: tomcrypt_custom.h  tomcrypt_nim.h  tomcrypt_prng.h
src/lib/ltc/sha256d/: ltc_sha256.c  ltc_sha256specs.c
src/lib/misc/: .gitignore  Makefile.am  msrc.nim  prjcfg.nim  seqext.nim
src/lib/rnd64d/: .gitignore  Makefile.am  rndcc.nim  rndft.nim  rndxo.nim
src/lib/salsa/: .gitignore  Makefile.am  salsa.nim  salsa20-const.c  salsa20specs.c  salsadesc.nim
src/lib/salsa/private/: ecrypt-sync.h  salsa20.c
src/lib/salsa/private/info/: Makefile  source.txt  test.mk
src/lib/spmx/: .gitignore  Makefile.am  splitmix64.c  spmx.nim  spmx64seeder.c
src/lib/uecc/: .gitignore  Makefile.am  uecc-const.c  uecc.nim  ueccdesc.nim  ueccspecs.c
src/lib/uecc/private/: fetch-uecc.sh
src/lib/uecc/private/uecc-v7/: CHANGELOG  CMakeLists.txt  COPYRIGHT  Doxyfile.in  README  libuecc.pc.in
src/lib/uecc/private/uecc-v7/src/: CMakeLists.txt  ec25519.c  ec25519_gf.c
src/lib/xoro/: .gitignore  Makefile.am  xoro.nim  xoro128seeder.c  xoroshiro128plus.c
tools/: .gitignore
tools/ac/: ac_buildenv_init.m4  ac_check_cmdpath.m4  ac_check_common_sizeof.m4  ac_check_endian.m4  ac_check_inline.m4  ac_check_wine.m4  ac_config_4build.m4  ac_config_init.m4  ac_disable_unit_tests.m4  ac_enable_cpu.m4  ac_enable_debug.m4  ac_func_vsnprintf.m4  ac_headers_posix.m4  ac_headers_windows.m4  ac_includes_windows.m4  ac_prog_cc_asm_inline.m4  ac_prog_gcc_attribs.m4  ac_prog_gcc_cmd.m4  ac_subst_basedir.m4  ac_with_mswin_stdio.m4  ac_without_dev_random.m4  ac_without_local_nim.m4
tools/am/: Makefile.nimhelper
tools/sh/: build-nim.sh  jenkins-notes.sh  profile.inc
