# -*- makefile-automake -*-
#
# Top level makefile
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# recommended by libtoolize
ACLOCAL_AMFLAGS = -I m4lib

SUBDIRS    = boot src
CLEANFILES =

# ---------------------------------------------------------------------------
# Auto-for-build configuration
# ---------------------------------------------------------------------------

help:
	@echo
	@echo "$(MAKE) [target]"
	@echo
	@echo "target: all [dist]clean -- standard targets dist/clean"
	@echo "      | prepare         -- prepare target, imports etc."
	@echo "      | update          -- force library import update"
	@echo "      | docs            -- generate docs"
	@echo "      | try             -- run quick source file tests"
	@echo "      | check           -- run all tests"
	@echo

# ---------------------------------------------------------------------------
# Targets ...
# ---------------------------------------------------------------------------

all-local::

.PHONY: prepare update try
prepare update::
	$(MAKE) -C boot $@

# ---------------------------------------------------------------------------
# Collect documentation
# ---------------------------------------------------------------------------

.PHONY: docs
docs::
	@$(MAKE) -C boot prepare
	@$(MAKE) -C src $@
	@mkdir -p doc
	@find . -name \*.nim -print|while read f; do \
	  b=`expr "$$f" : '\(.*\)\.nim$$'` ; \
	  test -f "$$b.html" && (set -x; cp "$$b.html" doc/) ; \
	done

clean-local::
	rm -f doc/*.html
	rmdir doc 2>/dev/null; :

# ---------------------------------------------------------------------------
# Auto configuration helper
# ---------------------------------------------------------------------------

.PHONY: libtool
libtool: $(LIBTOOL_DEPS)
	$(SHELL) ./config.status --recheck

.PHONY: autoreconf reconf
autoreconf reconf: libtool
	rm -f $(AUTOGENERATED)
	touch configure.ac
	autoreconf

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
