# -*- makefile-automake -*-
#
# $Id: c981a2d3255b28db48fa1b87737a17f7e2edd7dc $
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

SUBDIRS = uecc xoro spmx chacha salsa ltc
CLEANFILES = *.exe *.html ecckey rnd64 ecckey_dumper sesskey xcrypt

NIM2CFLAGS =
NIM2XFLAGS =
NIMNOCHECK =

include ../../tools/am/Makefile.nimhelper

# End
