# -*- makefile-automake -*-
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

SUBDIRS = uecc xoro spmx chacha salsa ltc
CLEANFILES = *.exe *_*.html ecckey rnd64 ecckey_dumper sesskey xcrypt

NIMDOCHTML = ecckey sesskey rnd64 xcrypt
NIM2CFLAGS =
NIM2XFLAGS =
NIMNOCHECK =

include ../../tools/am/Makefile.nimhelper

# End
